fix first text portfolio position mobile

--- a/src/index.css
+++ b/src/index.css
@@ -487,7 +487,7 @@ section.portfolio .txt-ctn-2 {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  padding-top: 80px;
+  padding-top: 25px;
 }
 
 section.portfolio .txt-ctn-2 {
